syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.project_nebula.grpc_common.virtual_machine_ops.proto";

message AuthCredentials {
  string token = 1;
}

enum ImageSource {
  LOCAL = 0;
  ONLINE = 1;
}

enum State {
    STARTED = 0;
    RUNNING = 1;
    STOPPED = 2;
    CRASHED = 3;
    SHUTDOWN = 4;
    FAILED = 5;
    UNKNOWN = 6;
}

enum ErrorType {
    CREATE_ERROR = 0;
    DELETE_ERROR = 1;
    STOP_ERROR = 2;
    START_ERROR = 3;
    RESTART_ERROR = 4;
}

message Image {
  string url = 1;
  ImageSource source = 2;
}

message Specs {
  int32 cpus = 1;
  int32 memory = 2;
  int32 storage = 3;
}

message VirtualMachine {
  string id = 1;
  Specs specs = 2;
  Image image = 3;
  AuthCredentials authCredentials = 4;
}

message VirtualMachineMetadataDTO {
  string ipv4 = 1;
  string ipv6 = 2;
  State state = 3;
}

message VirtualMachineOperationError {
  ErrorType type = 1;
  string message = 2;
}

message VirtualMachineOperationResult {
  bool success = 1;
  oneof result {
    VirtualMachineOperationError error = 2;
    VirtualMachineMetadataDTO metadata = 3;
  }
}

service VirtualMachineOperations {
  rpc createVM(VirtualMachine) returns (VirtualMachineOperationResult);
  rpc deleteVM(VirtualMachine) returns (VirtualMachineOperationResult);
  rpc startVM(VirtualMachine) returns (VirtualMachineOperationResult);
  rpc stopVM(VirtualMachine) returns (VirtualMachineOperationResult);
  rpc restartVM(VirtualMachine) returns (VirtualMachineOperationResult);
}

